[gd_scene load_steps=4 format=3 uid="uid://vmiop4eikqxl"]

[ext_resource type="Script" path="res://scripts/ui/CardPopup.gd" id="1_gmnk1"]
[ext_resource type="Texture2D" uid="uid://dje2j5j6nxdnn" path="res://assets/ui/star.png" id="2_1yw4u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1edjl"]
bg_color = Color(0.2, 0.2, 0.2, 0.95)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="CardPopup" type="Panel"]
custom_minimum_size = Vector2(400, 300)
offset_right = 400.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1edjl")
script = ExtResource("1_gmnk1")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Название ингредиента"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Описание ингредиента. Здесь будет размещено детальное описание ингредиента, его характеристики и особенности."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="QualityStars" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -10.0
offset_right = 60.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("2_1yw4u")
expand_mode = 2
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("2_1yw4u")
expand_mode = 2
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="QualityStars"]
layout_mode = 2
texture = ExtResource("2_1yw4u")
expand_mode = 2
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Цена: 10₽"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 40.0
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "В наличии: 5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Купить"

[node name="ImproveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 70.0
offset_right = 120.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Улучшить"

[node name="DiscardButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Выбросить"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
grow_horizontal = 0
text = "X"

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -110.0
offset_right = -30.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "Кол-во:"
vertical_alignment = 1

[node name="AmountSpinBox" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -110.0
offset_right = 80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
min_value = 1.0
max_value = 10.0
value = 1.0